prerelease-bugfixes fix spacing in article footer

--- a/public/styles/component/_collapsible-menu.scss
+++ b/public/styles/component/_collapsible-menu.scss
@@ -1,7 +1,6 @@
 $border-color: #d0d0d0;
 
 .collapsible-menu {
-	margin-bottom: rem-calc(20);
 
 	border-top: 1px solid $border-color;
 	border-bottom: 1px solid $border-color;
